#Copyright Florian Goujeon 2021.
#Distributed under the Boost Software License, Version 1.0.
#(See accompanying file LICENSE or copy at
#https://www.boost.org/LICENSE_1_0.txt)
#Official repository: https://github.com/fgoujeon/fsm-benchmark

cmake_minimum_required(VERSION 3.10)

add_subdirectory(common)
add_subdirectory(experimental)
add_subdirectory(maki)
add_subdirectory(msm)
add_subdirectory(sml)
